<resources>
    <string name="app_name">Netguru Application</string>
    <string name="shopping_list">Shopping List</string>
    <string name="list_of_things">List of things</string>
    <string name="save_shopping_list">save list</string>
    <string name="add_list">Add List</string>
    <string name="archived_lists">Archived Lists</string>
    <string name="current_lists">current lists</string>
    <string name="remove_shopping_list">remove list</string>
    <string name="remove_list">remove list</string>
    <string name="move_to_archive">move to archive</string>
    <string name="delete">delete</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="save_to_archive">save to archive</string>
    <string name="restore_list">restore list</string>
    <string name="write_a_title">Write a title</string>
    <string name="your_shopping_list">Your shopping list</string>
    <string name="save">save</string>
    <string name="archive">Archived Lists
    </string>
    <string name="list_of_shop_lists">Shopping Lists</string>
    <string name="edit_note">Edit List</string>
    <string name="view_archived">Archived List</string>
    <string name="add_note">Add New List</string>
</resources>
