<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddNoteActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-203dp"
            tools:layout_editor_absoluteY="188dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_view_and"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="0.2"
                    android:autofillHints="Write a title"
                    android:gravity="center"
                    android:text="@string/shopping_list"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/id_view_and"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="0.7"
                    android:autofillHints="id"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#000"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/remove_list_and"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/remove_list" />
            </LinearLayout>

            <TextView
                android:id="@+id/list_view_and"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1.8"
                android:autofillHints="Your shopping list"
                android:gravity="top"
                android:scrollbars="vertical"
                android:text="@string/list_of_things"
                android:textColor="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/archived_lists_and"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.04"
                    android:text="@string/archived_lists"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/current_lists_and"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.04"
                    android:text="@string/current_lists"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/restore_list_and"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.04"
                    android:text="@string/restore_list" />

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>