<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddNoteActivity">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="-203dp"
            tools:layout_editor_absoluteY="188dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/title_edit_text_an"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:hint="@string/write_a_title"
                    android:inputType="text"
                    android:text=""
                    android:textColor="#000" />

                <Button
                    android:id="@+id/save_list_an"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/save_shopping_list" />

                <EditText
                    android:id="@+id/id_edit_text_an"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="0.7"
                    android:autofillHints="id"
                    android:gravity="center"
                    android:inputType="text"
                    android:text=""
                    android:textColor="#000"
                    android:visibility="gone" />
            </LinearLayout>

            <EditText
                android:id="@+id/list_edit_text_an"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1.8"
                android:gravity="top"
                android:hint="@string/your_shopping_list"
                android:inputType="textMultiLine"
                android:textColor="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/current_lists_an"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.04"
                    android:text="@string/current_lists" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/archived_lists_an"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.04"
                    android:text="@string/archived_lists"
                    tools:ignore="ButtonStyle" />


                <Button
                    android:id="@+id/save_list_to_archive_an"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.04"
                    android:text="@string/save_to_archive"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>